--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,12 +5,14 @@ repos:
       - id: black
         exclude: ^townhall/myapi/migrations/
         language_version: python3.12
+        pass_filenames: false
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.1
     hooks:
       - id: flake8
         args: ['--max-line-length=88', '--extend-ignore=E203,E701']
         exclude: ^townhall/myapi/migrations/
+        pass_filenames: false
   - repo: local
     hooks:
       - id: run-tests
@@ -18,4 +20,5 @@ repos:
         entry: manage.py test tests
         language: system
         types: [python]
-        
+        pass_filenames: false
+
