--- a/.github/workflows/automatic_testing.yaml
+++ b/.github/workflows/automatic_testing.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r townhall/requirements.txt
 
     - name: Run Tests
       run: python3 manage.py test tests
