--- a/.github/workflows/automatic_testing.yaml
+++ b/.github/workflows/automatic_testing.yaml
@@ -27,4 +27,4 @@ jobs:
         pip install -r townhall/requirements.txt
 
     - name: Run Tests
-      run: python3 manage.py test tests
+      run: python3 townhall/manage.py test tests
