--- a/.github/workflows/flake8.yaml
+++ b/.github/workflows/flake8.yaml
@@ -24,4 +24,4 @@ jobs:
         pip install -r townhall/requirements.txt
 
     - name: Run Flake8
-      run: flake8
+      run: flake8 --max-line-length=88 --extend-ignore=E203,E701
